--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.3",
+    "@supabase/supabase-js": "^2.95.3",
+    "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "pg": "^8.16.3"
   }
